deploy/manifests/aolm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: altemistahub
