deploy/manifests/aalm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: altemistahub
---
apiVersion: v1
kind: Namespace
metadata:
  name: aalm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aalm-operator
  namespace: aalm
spec:
  replicas: 1
  selector:
    matchLabels:
      name: aalm-operator
  template:
    metadata:
      labels:
        name: aalm-operator
    spec:
      serviceAccountName: aalm-operator
      containers:
        - name: aalm-operator
          image: eu.gcr.io/coealtemista/aalm-operator
          command:
          - aalm-operator
          imagePullPolicy: Always
