deploy/manifests/kubeapps-tests.yaml
---
# Source: kubeapps/templates/tests/test-assetsvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "kubeapps-assetsvc-test"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: kubeapps-assetsvc-test
      image: bitnami/nginx:1.16.1-debian-10-r27
      command:
        - sh
        - -c
        - curl -o /tmp/output $ASSETSVC_HOST:$ASSETSVC_PORT/v1/charts && cat /tmp/output && cat /tmp/output | grep wordpress
  restartPolicy: Never

---
# Source: kubeapps/templates/tests/test-dashboard.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "kubeapps-dashboard-test"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: kubeapps-dashboard-test
      image: bitnami/nginx:1.16.1-debian-10-r27
      command:
        - sh
        - -c
        - curl -o /tmp/output $DASHBOARD_HOST && cat /tmp/output && cat /tmp/output | grep 'You need to enable JavaScript to run this app'
  restartPolicy: Never
